--- a/Gamperl/Base.lproj/Main.storyboard
+++ b/Gamperl/Base.lproj/Main.storyboard
@@ -913,6 +913,85 @@ Max-Mustermann-Str.4</string>
             </objects>
             <point key="canvasLocation" x="4705" y="167"/>
         </scene>
+        <!--Products View Controller-->
+        <scene sceneID="Ugu-0d-rG0">
+            <objects>
+                <viewController storyboardIdentifier="ProductsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1Tn-es-xQF" customClass="ProductsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fmg-gW-KJ2"/>
+                        <viewControllerLayoutGuide type="bottom" id="Kny-bm-5km"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="f0V-90-zEO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lwd-Fv-lbi">
+                                <rect key="frame" x="0.0" y="20" width="375" height="80"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Products" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6p-5h-WEA">
+                                        <rect key="frame" x="153" y="30" width="69" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PQV-gU-Dib">
+                                        <rect key="frame" x="8" y="23" width="30" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <inset key="imageEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                        <connections>
+                                            <action selector="backButtonTouched:" destination="Ld2-8G-44C" eventType="touchUpInside" id="aDY-Da-tT4"/>
+                                            <action selector="backButtonTouched:" destination="ion-RW-T5j" eventType="touchUpInside" id="zCc-6S-QE7"/>
+                                            <action selector="backPressed:" destination="OGM-pk-SvP" eventType="touchUpInside" id="yeU-da-67o"/>
+                                            <action selector="backTouched:" destination="wMG-MM-LoC" eventType="touchUpInside" id="mpz-iB-9LS"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backWhite" translatesAutoresizingMaskIntoConstraints="NO" id="8xE-fB-vD6">
+                                        <rect key="frame" x="18" y="30" width="10" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="C2u-oG-cNp"/>
+                                            <constraint firstAttribute="width" constant="10" id="rDo-TL-ffe"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <constraints>
+                                    <constraint firstItem="PQV-gU-Dib" firstAttribute="centerY" secondItem="Lwd-Fv-lbi" secondAttribute="centerY" id="7cU-Zr-ccZ"/>
+                                    <constraint firstItem="U6p-5h-WEA" firstAttribute="centerY" secondItem="Lwd-Fv-lbi" secondAttribute="centerY" id="cQL-Yu-lg2"/>
+                                    <constraint firstItem="PQV-gU-Dib" firstAttribute="leading" secondItem="Lwd-Fv-lbi" secondAttribute="leading" constant="8" id="joc-uL-1Pj"/>
+                                    <constraint firstItem="8xE-fB-vD6" firstAttribute="centerY" secondItem="PQV-gU-Dib" secondAttribute="centerY" id="lrl-Jp-lXd"/>
+                                    <constraint firstItem="8xE-fB-vD6" firstAttribute="centerX" secondItem="PQV-gU-Dib" secondAttribute="centerX" id="qX8-sN-nQp"/>
+                                    <constraint firstItem="U6p-5h-WEA" firstAttribute="centerX" secondItem="Lwd-Fv-lbi" secondAttribute="centerX" id="sel-bT-rMK"/>
+                                    <constraint firstAttribute="height" constant="80" id="tRy-L9-MIT"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4dq-ZW-zja">
+                                <rect key="frame" x="0.0" y="100" width="375" height="567"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="1Tn-es-xQF" id="59J-hO-Hta"/>
+                                    <outlet property="delegate" destination="1Tn-es-xQF" id="2dp-VV-Chi"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Lwd-Fv-lbi" firstAttribute="leading" secondItem="f0V-90-zEO" secondAttribute="leadingMargin" constant="-16" id="3Ce-kz-ssm"/>
+                            <constraint firstItem="Kny-bm-5km" firstAttribute="top" secondItem="4dq-ZW-zja" secondAttribute="bottom" id="FWd-5I-XP4"/>
+                            <constraint firstItem="4dq-ZW-zja" firstAttribute="top" secondItem="Lwd-Fv-lbi" secondAttribute="bottom" id="X5c-Ho-fTo"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4dq-ZW-zja" secondAttribute="trailing" constant="-16" id="riZ-6X-q9G"/>
+                            <constraint firstItem="Lwd-Fv-lbi" firstAttribute="top" secondItem="fmg-gW-KJ2" secondAttribute="bottom" id="sQt-1e-wQH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Lwd-Fv-lbi" secondAttribute="trailing" constant="-16" id="t05-Y4-At6"/>
+                            <constraint firstItem="4dq-ZW-zja" firstAttribute="leading" secondItem="f0V-90-zEO" secondAttribute="leadingMargin" constant="-16" id="yiC-J0-vlM"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="4dq-ZW-zja" id="NGL-xZ-ifh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yoc-xf-Faq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4701.6000000000004" y="834.33283358320841"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="Ynk-aq-A54">
             <objects>
